# OpenRTCClient

./: .gitignore  README.md
build_system/: build.py  extrac_webrtc_headers.bat  gn_to_cmake.py  pack.py  prepare_build.py  webrtc_build
docs/: jni_generator工作原理.md
examples/CameraCapturer/: CMakeLists.txt  CameraCapturer.cpp  CameraCapturer.h  CameraCapturerTrackSource.h  VideoCapturer.cpp  VideoCapturer.h  VideoRendererWidget.cpp  VideoRendererWidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  webrtc_headers.h
examples/android_gradle/: README.md  build.gradle  gradle.properties  settings.gradle
examples/android_gradle/AppRTCMobile/: build.gradle
examples/android_gradle/KingKongRTC/: build.gradle
examples/android_gradle/libwebrtc/: CMakeLists.txt  build.gradle
examples/android_gradle/libwebrtc/src/cpp/webrtc/: CMakeLists.txt
examples/android_gradle/libwebrtc/src/main/: AndroidManifest.xml
examples/android_gradle/libwebrtc/src/main/java/com/rtc/: Constants.java  DataChannelParameters.java  RoomConnectionParameters.java
examples/android_gradle/libwebrtc/src/main/java/org/webrtc/: AndroidVideoDecoder.java  Camera2Capturer.java  Camera2Enumerator.java  Camera2Session.java  CameraCapturer.java  DefaultVideoDecoderFactory.java  DefaultVideoEncoderFactory.java  EglRenderer.java  GlGenericDrawer.java  HardwareVideoEncoderFactory.java  IceCandidate.java  MediaCodecVideoDecoderFactory.java  MediaConstraints.java  NV12Buffer.java  NV21Buffer.java  NativeAndroidVideoTrackSource.java  NetworkChangeDetector.java  NetworkMonitor.java  NetworkPreference.java  PeerConnectionDependencies.java  PeerConnectionFactory.java  PlatformSoftwareVideoDecoderFactory.java  (+16 more)
examples/android_gradle/mediasoup-client/: .gitignore  build.gradle
examples/android_gradle/mediasoup-demo/: build.gradle
examples/android_gradle/mediasoup-demo/src/main/res/layout/: item_remote_peer.xml
examples/android_gradle/p2p/: build.gradle
examples/android_gradle/p2p/src/main/: AndroidManifest.xml
examples/android_gradle/p2p/src/main/res/layout/: activity_main.xml  activity_p2p_call.xml
examples/android_gradle/p2ps/: build.gradle
examples/android_gradle/p2ps/src/main/: AndroidManifest.xml
examples/android_gradle/p2ps/src/main/res/layout/: activity_main.xml  activity_p2ps.xml
examples/android_gradle/p2ps/src/main/res/values/: strings.xml  themes.xml
examples/android_gradle/rtc/: CMakeLists.txt  build.gradle
examples/android_gradle/rtc/src/cpp/: CMakeLists.txt
examples/loop_connect/src/: main.cpp
examples/p2ps/p2ps/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  webrtc_headers.h
examples/p2ps/p2ps/src/common/: CameraCapturer.cpp  CameraCapturer.h  CameraCapturerTrackSource.h  CreateSessionDescriptionObserverImpl.h  ISignalClient.h  Message.h  OnPeerManagerEvents.h  OnRoomStateChangeCallback.h  OnSignalEventListener.h  PeerConnectionObserverImp.h  PeerManager.cpp  PeerManager.h  RTCRoomManager.cpp  RTCRoomManager.h  SetSessionDescriptionObserverImpl.h  SocketIoSignalClientImpl.cpp  SocketIoSignalClientImpl.h  VideoCapturer.cpp  VideoCapturer.h  VideoRendererWidget.cpp  VideoRendererWidget.h  VideoSinkProxy.cpp  VideoSinkProxy.h
examples/signalserver/: .gitignore  package.json  proxy_server.js  server.js
webrtc/: BUILD.gn
webrtc/api/: wrapping_async_dns_resolver.h
webrtc/examples/androidvoip/jni/: android_voip_client.h
webrtc/examples/objc/AppRTCMobile/: ARDAppEngineClient.m
webrtc/examples/objc/AppRTCMobile/ios/: Info.plist
webrtc/examples/peerconnection/client/: conductor.cc  defaults.cc  main.cc  main_wnd.cc  peer_connection_client.cc  peer_connection_client.h
webrtc/examples/peerconnection/server/: main.cc
webrtc/media/sctp/: dcsctp_transport.h  sctp_transport_internal.h  usrsctp_transport.h  usrsctp_transport_reliability_unittest.cc  usrsctp_transport_unittest.cc
webrtc/modules/video_capture/windows/: sink_filter_ds.cc
webrtc/net/dcsctp/socket/: dcsctp_socket_network_test.cc
webrtc/p2p/base/: basic_async_resolver_factory_unittest.cc  connection.h  dtls_transport_unittest.cc  ice_transport_internal.h  p2p_transport_channel_unittest.cc  port.h  port_allocator.h  port_allocator_unittest.cc  port_interface.h  port_unittest.cc  regathering_controller.h  regathering_controller_unittest.cc  stun_port_unittest.cc  stun_request.h  stun_request_unittest.cc  stun_server.h  tcp_port_unittest.cc  turn_port.cc  turn_port.h  turn_port_unittest.cc  turn_server.cc  turn_server.h
webrtc/p2p/client/: basic_port_allocator.h  basic_port_allocator_unittest.cc
webrtc/p2p/stunprober/: stun_prober.cc  stun_prober.h
webrtc/pc/: channel.h  channel_unittest.cc  data_channel_controller.h  data_channel_unittest.cc  dtls_srtp_transport_unittest.cc  dtmf_sender.h  dtmf_sender_unittest.cc  jsep_transport_controller.h  jsep_transport_controller_unittest.cc  jsep_transport_unittest.cc  peer_connection.h  peer_connection_end_to_end_unittest.cc  peer_connection_internal.h  rtc_stats_collector.h  rtp_sender.cc  rtp_sender.h  rtp_sender_receiver_unittest.cc  rtp_transceiver.h  rtp_transport_internal.h  rtp_transport_unittest.cc  sctp_data_channel.h  sctp_data_channel_transport.h  sctp_transport.h  sdp_offer_answer.h  srtp_transport_unittest.cc  webrtc_session_description_factory.h
webrtc/pc/test/: fake_peer_connection_base.h  peer_connection_test_wrapper.h
webrtc/rtc_base/: async_packet_socket.h  nat_server.h  nat_socket_factory.cc  nat_unittest.cc  network.h  network_unittest.cc  physical_socket_server.h  proxy_server.h  server_socket_adapters.h  socket.h  socket_stream.h  socket_unittest.cc  ssl_adapter_unittest.cc  ssl_stream_adapter_unittest.cc  test_client.h  test_echo_server.h  thread_unittest.cc  virtual_socket_server.h  virtual_socket_unittest.cc
webrtc/rtc_tools/network_tester/: test_controller.h
webrtc/sdk/android/src/jni/: video_encoder_factory_wrapper.cc
webrtc/test/network/: emulated_network_manager.h  network_emulation_unittest.cc
webrtc/test/peer_scenario/: scenario_connection.cc
webrtc/video/: video_stream_encoder.cc
(+95 files in other folders)
